# team_comm_tools

./: .gitignore  .gitmodules  .readthedocs.yaml  CNAME  LICENSE  MANIFEST.in  README.md  TemporalFeatures.py  asset-manifest.json  entropy.py  github_repo_getting_started.md  hedge.py  index.Rmd  index.html  mindmanager_setup.md  output.csv  package-lock.json  package.json  positivity_Zscore.py  positivity_zscore.py  proxy.php  pyproject.toml  requirements.txt  sentiment_analysis.py  sentiments.ipynb  setup.py  setup.sh  temporal_features.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature-implementation-template.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: github-actions-feature_dict.yaml  github-actions-test-simple.yml  github-actions-testing.yml  github-actions-website.yaml
docs/: .readthedocs.yaml  filtered_dict.json  requirements.txt
docs/source/: basics.rst  calculate_chat_level_features.rst  calculate_conversation_level_features.rst  calculate_user_level_features.rst  conf.py  examples.rst  feature_builder.rst  index.rst  intro.rst  modules.rst
examples/: demo.ipynb  featurize.py
feature_engine/: README_featurizer.md  calcavgDD.ipynb  certainty.ipynb  certainty_test.csv  config.json  disc_features.ipynb  elreport.csv  feature_builder.py  feature_dict.py  feature_dictionary.json  features.json  features.pkl  featurize.py  fflow.ipynb  generate_feature_dict.py  hedge.py  import_nltk.py  model.ipynb  model_builder.py  requirements.txt  test_featurize.py  test_num_words.csv  test_reddit_features.csv  testing_lexical_features.ipynb  visualization_chat_level.ipynb  visualization_dev.ipynb
feature_engine/features/: Entropy.py  basic_features.py  burstiness.py  calcavgDD.ipynb  certainty.py  cosine_similarity.py  discursive_diversity.py  emotion_features.py  entropy.py  feature_extraction.py  fflow.py  get_all_DD_features.py  get_message_vectors.py  get_user_network.py  gini_coefficient.py  hedge.py  hedge_2.py  hedge_2_temporary.py  hedge_advanced.py  info_exchange_zscore.py  information_diversity.py  lexical_features.py  lexical_features_v2.py  lexicons_dict.pkl  named_entity_recognition_features.py  ngram_cosine_similarity.py  ngram_similarity.py  other_LIWC_features.py  other_lexical_features.py  politeness_features.py  politeness_v2.py  (+21 more)
hpcc-setup/: hpcc-setup-documentation.md
james/: james_debug.ipynb
mindmanager_map/: Team Process Map.mmap  mindmanager_setup.md
src/: README_featurizer.md  feature_builder.py  feature_dict.py  featurize.py  index.js  requirements.txt
tests/: run_package_grouping_tests.py  run_tests.py  test_feature_metrics.py  test_package.py  word_mimicry.py
tpm-website/: package-lock.json  package.json
website/: package-lock.json  package.json
(+1084 files in other folders)
