[build-system]
requires = [
  "setuptools >= 42", "wheel", "toml"
]
build-backend = "setuptools.build_meta"

[project]
name = "team_comm_tools"
version = "0.1.5"
requires-python = ">= 3.10"
dependencies = [
  "chardet>=3.0.4",
  "convokit==3.0.0",
  "emoji==1.7.0",
  "flask==3.0.3",
  "fuzzywuzzy==0.18.0",
  "gensim>=4.3.3",
  "matplotlib>=3.0.0",
  "nltk==3.9.1",
  "numpy<2.0.0",
  "pandas==2.2.2",
  "pyphen==0.14.0",
  "pytest==8.3.2",
  "pytest-runner==6.0.1",
  "python-dateutil==2.9.0",
  "pytz==2024.1",
  "regex==2023.12.25",
  "scikit-learn==1.5.1",
  "scipy<1.14.0",
  "sentence-transformers>=2.3.1",
  "sentencepiece>=0.2.0",
  "spacy>=3.7.2",
  "spacy-legacy==3.0.12",
  "spacy-loggers==1.0.5",
  "textblob==0.17.1",
  "tokenizers==0.19.1",
  "torch==2.4.1",
  "torchaudio==2.4.1",
  "torchvision==0.19.1",
  "transformers==4.44.0",
  "tqdm>=4.66.5",
  "tzdata>=2023.3",
  "tzlocal==5.2"
]
authors = [
  {name = "Xinlan Emily Hu", email = "xehu@wharton.upenn.edu"},
  {name = "Yuxuan Zhang", email = "yuxuanzh@seas.upenn.edu"},
]
description = "A toolkit that generates a variety of features for team conversation data."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["computational social science", "teams", "communication", "conversation", "chat", "analysis"]

[project.urls]
Homepage = "https://teamcommtools.seas.upenn.edu/"
Documentation = "https://conversational-featurizer.readthedocs.io/en/latest/"
Repository = "https://github.com/Watts-Lab/team-comm-tools"

[project.scripts]
download_resources = "team_comm_tools.utils.download_resources:download"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"team_comm_tools" = [
  'features/lexicons/dale_chall.txt',
  'features/lexicons/function_words.txt',
  'features/lexicons/question_words.txt',
  'features/assets/*'
]
